Fix z-index of drop down being ludicrously high, making them render on top ot the nav bar

--- a/static2/css/core/ui.v2.1.css
+++ b/static2/css/core/ui.v2.1.css
@@ -365,9 +365,6 @@ form input[type="password"]:invalid {
   position: absolute;
   display: none;
 
-  /*opacity: 0;
-  transition: all 0.3s;*/
-
   width: calc(100% - 22px);
   max-height: 400px;
   overflow-y: scroll;
@@ -379,7 +376,7 @@ form input[type="password"]:invalid {
   margin-left: 10px;
   margin-right: 10px;
 
-  z-index: 10000;
+  z-index: 100;
 
   box-shadow: 0px 8px 10px #ccc, -10px 8px 15px #ccc, 10px 8px 15px #ccc;
 }
